Edit  mobile version homepage and about page

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
             </div>
             <div class="row program_section">
                 <div class="star_logo">
-                    <img src="/assets/images/star_logo.PNG" alt="">
+                    <img src="assets/images/star_logo.PNG" alt="">
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="row bg-white">
-        <div class="col"><img src="/assets/images/star_logo.PNG" width="150" height="50" alt=""></div>
+        <div class="col"><img src="assets/images/star_logo.PNG" width="150" height="50" alt=""></div>
         <div class="col"><p class="tx-custom-black py-1 joinUs">Join us for difference</p></div>
       </div>
     </section>
