--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="row program_section">
                 <div class="program_item">
                     <div class="img_cover">
-                        <img src="/assets/images/discoursew.png" width="40px" alt="">
+                        <img src="assets/images/discoursew.png" width="40px" alt="">
                     </div>
                     <div class="title">
                         <h6 class="tx-custom-color">Lecture</h6>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="program_item">
-                    <div class="img_cover"><img src="/assets/images/galery.png" width="40px" alt=""></div>
+                    <div class="img_cover"><img src="assets/images/galery.png" width="40px" alt=""></div>
                     <div class="title">
                         <h6 class="tx-custom-color">Gramar</h6>
                     </div>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="program_item">
-                    <div class="img_cover"><img src="/assets/images/interm.png" width="40px" alt=""></div>
+                    <div class="img_cover"><img src="assets/images/interm.png" width="40px" alt=""></div>
                     <div class="title">
                         <h6 class="tx-custom-color">Dictation</h6>
                     </div>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="program_item">
-                    <div class="img_cover"><img src="/assets/images/discoursew.png" width="40px" alt=""></div>
+                    <div class="img_cover"><img src="assets/images/discoursew.png" width="40px" alt=""></div>
                     <div class="title">
                         <h6 class="tx-custom-color">Topic</h6>
                     </div>
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="program_item">
-                    <div class="img_cover"><img src="/assets/images/discourse.png" width="40px" alt=""></div>
+                    <div class="img_cover"><img src="assets/images/discourse.png" width="40px" alt=""></div>
                     <div class="title">
                         <h6 class="tx-custom-color">Quiz</h6>
                     </div>
@@ -142,7 +142,7 @@
            
         </div>
     </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
