--- a/about.html
+++ b/about.html
@@ -20,8 +20,44 @@
 
 <body>
     <div class="main pb-4">
-        <div class="container-fluid">
+        <div class="container">
             <nav class="navbar navbar-expand-lg bg-transparent fs-5 fw-semibold">
+                <div class="container">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand d-none d-lg-block" href="index.html">Star Educational Society</a>
+                    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                        aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Star Educational Society</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Program</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Join</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Sponsor</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">News</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <!-- <nav class="navbar navbar-expand-lg bg-transparent fs-5 fw-semibold">
                 <div class="container">
                     <a class="navbar-brand flex-grow-1 d-none d-lg-block fs-4" href="#">Navbar scroll</a>
                     <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
@@ -52,15 +88,18 @@
                         </div>
                     </div>
                 </div>
-            </nav>
+            </nav> -->
 
             <div class="row">
                 <div class="col-md-8">
                     <div class="mt-5 active rounded">
                         <h6 class="text-center">"Hello! Sharing world"</h6>
                         <div id="demo-text" class=" fw-bolder px-1 ">STAR EDUCATIONAL <br> SOCIETY 2022 </div>
-                        <P class="tx-custom-black border fs-small px-2 py-2 bg-white mt-3 mb-3">Star Educational Society is a not-for-profit educational institute focused on providing access to qu.Star Educational Society is an education management company based in Afghanistan.</P>
-                        <P class="tx-custom-black fs-small m-0 text-center">Please contact us per Email for any further questions about Star Educational Society!</P>
+                        <P class="tx-custom-black border fs-small px-2 py-2 bg-white mt-3 mb-3">Star Educational Society
+                            is a not-for-profit educational institute focused on providing access to qu.Star Educational
+                            Society is an education management company based in Afghanistan.</P>
+                        <P class="tx-custom-black fs-small m-0 text-center">Please contact us per Email for any further
+                            questions about Star Educational Society!</P>
                         <a href="#" class="email tx-custom-black">Star2022@gmail.com</a>
                     </div>
                 </div>
@@ -71,7 +110,8 @@
     <section class="section bg-white border-bottom pb-4">
         <div class="container-fluid bg-white">
             <div class="row text-white px-1 py-3 text-center">
-                <h5 class="tx-custom-black">Star Educationlal Society 2022</h5><hr class="hr">
+                <h5 class="tx-custom-black">Star Educationlal Society 2022</h5>
+                <hr class="hr">
                 <p class="tx-custom-black">The logo of Star Educational Society 2022 was decided through the logo
                     competation from 10 June to 7. July</p>
             </div>
@@ -85,7 +125,8 @@
     <!-- .......HISTORY SECTION....... -->
     <section class="history_section py-4 d-flex flex-column justify-content-center align-item-center">
         <div class="title d-flex flex-column justify-content-center  align-item-center py-2 px-2">
-            <h6>See the Past of Star Educational Society</h6><hr class="hr">
+            <h6>See the Past of Star Educational Society</h6>
+            <hr class="hr">
             <p>Take a look to the history of Star Educational Society when Changez Stablished this center</p>
         </div>
         <div class="master">
@@ -107,20 +148,27 @@
     </section>
 
     <section class="container-fluid bg-custom-black">
-      <div class="container py-5">
-        <div class="row"><div class="col text-center text-white"><h6>Contact</h6><hr class="hr"></div></div>
-        <div class="row text-center">
-            <div class="col text-white m-1">Google</div>
-            <div class="col text-white m-1">Facebook</div>
-            <div class="col text-white m-1">Twitter</div>
-            <div class="col text-white m-1">Instagram</div>
-            <div class="col text-white m-1">Youtube</div>
+        <div class="container py-5">
+            <div class="row">
+                <div class="col text-center text-white">
+                    <h6>Contact</h6>
+                    <hr class="hr">
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col text-white m-1">Google</div>
+                <div class="col text-white m-1">Facebook</div>
+                <div class="col text-white m-1">Twitter</div>
+                <div class="col text-white m-1">Instagram</div>
+                <div class="col text-white m-1">Youtube</div>
+            </div>
         </div>
-      </div>
-      <div class="row bg-white">
-        <div class="col"><img src="assets/images/star_logo.PNG" width="150" height="50" alt=""></div>
-        <div class="col"><p class="tx-custom-black py-1 joinUs">Join us for difference</p></div>
-      </div>
+        <div class="row bg-white">
+            <div class="col"><img src="assets/images/star_logo.PNG" width="150" height="50" alt=""></div>
+            <div class="col">
+                <p class="tx-custom-black py-1 joinUs">Join us for difference</p>
+            </div>
+        </div>
     </section>
     <!-- <script src="script.js"></script> -->
 </body>
