Add link and user interaction to mobile menu

--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-    <div class="main pb-4">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg bg-transparent fs-5 fw-semibold">
+    <div class="main pb-4 container px-0">
+        <div class="container-fluid px-0">
+            <nav class="navbar navbar-expand-lg fs-5 fw-semibold bg-transparent">
                 <div class="container">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -85,7 +85,7 @@
 
         </div>
     </div>
-    <section class="section bg-white border-bottom pb-4">
+    <section class="section bg-white border-bottom pb-4 container">
         <div class="container-fluid bg-white">
             <div class="row text-white px-1 py-3 text-center">
                 <h5 class="tx-custom-black mt-1">Star Educationlal Society 2022</h5>
@@ -101,7 +101,7 @@
         </div>
     </section>
     <!-- .......HISTORY SECTION....... -->
-    <section class="history_section py-4 d-flex flex-column justify-content-center align-item-center">
+    <section class="history_section py-4 d-flex flex-column justify-content-center align-item-center container">
         <div class="title d-flex flex-column justify-content-center  align-item-center py-2 px-2">
             <h6>See the Past of Star Educational Society</h6>
             <hr class="hr">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="img_cover">
                     <div class="layer">
-                        <h1>1999</h1>
+                        <h1>1990</h1>
                         <p>Lorem ipsum dolor sit amet consectetur,</p>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
         </div>
     </section>
 
-    <section class="container-fluid bg-custom-black">
+    <section class="container bg-custom-black">
         <div class="container py-5 d-md-none">
             <div class="row">
                 <div class="col text-center text-white">
@@ -134,14 +134,15 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col text-white m-1">Google</div>
-                <div class="col text-white m-1">Facebook</div>
-                <div class="col text-white m-1">Twitter</div>
-                <div class="col text-white m-1">Instagram</div>
-                <div class="col text-white m-1">Youtube</div>
+                <div class="col text-white m-1"><img src="assets/icons/mozilla.png" width="50" alt="mozilla"></div>
+                <div class="col text-white m-1"><img src="assets/icons/googlekorea.png" width="50" alt="google"></div>
+                <div class="col text-white m-1"><img src="assets/icons/naver.png" width="50" alt="naver"></div>
+                <div class="col text-white m-1"><img src="assets/icons/daumkakaologo.png" width="50"
+                        alt="daumkakaologo"></div>
+                <div class="col text-white m-1"><img src="assets/icons/airbnb.png" width="50" alt="airbnb"></div>
             </div>
         </div>
-        <div class="row bg-white">
+        <div class="row footer">
             <div class="col text-center pt-3">
                 <a class=" nav-link" href="#">Star<small class="active">Educational</small>Society</a>
             </div>
@@ -150,7 +151,7 @@
             </div>
         </div>
     </section>
-    <!-- <script src="script.js"></script> -->
+    <script src="about.js"></script>
 </body>
 
 </html>
