--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <div class="main pb-5">
+    <div class="main pb-5 container px-0">
         <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg fs-5 fw-semibold">
+            <nav class="navbar navbar-expand-lg fs-5 fw-semibold bg-transparent">
                 <div class="container">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -77,7 +77,7 @@
 
         </div>
     </div>
-    <section class="section bg-custom-black">
+    <section class="section bg-custom-black container">
         <div class="container-fluid bg-transparent">
             <div class="row text-white px-1 py-3 text-center">
                 <h5>Main Program</h5>
@@ -145,12 +145,11 @@
         </div>
     </section>
     <!-- .......TEACHER SECTION....... -->
-    <section class="teacher_section py-4 border d-flex flex-column justify-content-center align-item-center">
+    <section class="teacher_section py-4  d-flex flex-column justify-content-center align-item-center container">
         <div class="master">
             <div class="row text-white px-1 py-3 text-center">
                 <h6 class="tx-custom-black">Featured Teachers</h6>
                 <hr class="hr">
-                <!-- <hr class="hr"> -->
             </div>
             <div class="master_item" id="a">
 
@@ -160,7 +159,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid bg-custom-black" id="removeableFooter">
+    <section class="container bg-custom-black" id="removeableFooter">
         <div class="container py-5">
             <div class="row">
                 <div class="col text-center text-white">
@@ -169,11 +168,12 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col text-white m-1">Google</div>
-                <div class="col text-white m-1">Facebook</div>
-                <div class="col text-white m-1">Twitter</div>
-                <div class="col text-white m-1">Instagram</div>
-                <div class="col text-white m-1">Youtube</div>
+                <div class="col text-white m-1"><img src="assets/icons/mozilla.png" width="80" alt="mozilla"></div>
+                <div class="col text-white m-1"><img src="assets/icons/googlekorea.png" width="80" alt="google"></div>
+                <div class="col text-white m-1"><img src="assets/icons/naver.png" width="80" alt="naver"></div>
+                <div class="col text-white m-1"><img src="assets/icons/daumkakaologo.png" width="80"
+                        alt="daumkakaologo"></div>
+                <div class="col text-white m-1"><img src="assets/icons/airbnb.png" width="80" alt="airbnb"></div>
             </div>
         </div>
         <div class="row bg-white">
