Edit readme.md file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="main pb-5 container px-0">
+    <div class="main pb-5 container-fluid px-0">
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg fs-5 fw-semibold bg-transparent">
                 <div class="container">
@@ -62,6 +62,7 @@
                 </div>
             </nav>
 
+           <div class="container">
             <div class="row">
                 <div class="col head_content">
                     <div class="mt-5 active rounded ">
@@ -74,11 +75,12 @@
                     </div>
                 </div>
             </div>
+           </div>
 
         </div>
     </div>
-    <section class="section bg-custom-black container">
-        <div class="container-fluid bg-transparent">
+    <section class="section bg-custom-black container-fluid">
+        <div class="container bg-transparent">
             <div class="row text-white px-1 py-3 text-center">
                 <h5>Main Program</h5>
                 <hr class="hr">
@@ -159,7 +161,7 @@
             </div>
         </div>
     </section>
-    <section class="container bg-custom-black" id="removeableFooter">
+    <section class="container-fluid bg-custom-black" id="removeableFooter">
         <div class="container py-5">
             <div class="row">
                 <div class="col text-center text-white">
@@ -176,6 +178,8 @@
                 <div class="col text-white m-1"><img src="assets/icons/airbnb.png" width="80" alt="airbnb"></div>
             </div>
         </div>
+    </section>
+    <div class="container">
         <div class="row bg-white">
             <div class="col text-center pt-3">
                 <a class=" nav-link" href="#">Star<small class="active">Educational</small>Society</a>
@@ -184,7 +188,7 @@
                 <p class="tx-custom-black py-1 joinUs">Join us for difference</p>
             </div>
         </div>
-    </section>
+      </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
