Edit script file and fix teacher info loading process

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             </div>
             <div class="more">
-                <button><span>MORE</span><i class="bi bi-chevron-down mx-1"></i></button>
+                <button id="btn_more"><span>MORE</span><i class="bi bi-chevron-down mx-1"></i></button>
             </div>
         </div>
     </section>
@@ -170,12 +170,12 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col text-white m-1"><img src="assets/icons/mozilla.png" width="80" alt="mozilla"></div>
-                <div class="col text-white m-1"><img src="assets/icons/googlekorea.png" width="80" alt="google"></div>
-                <div class="col text-white m-1"><img src="assets/icons/naver.png" width="80" alt="naver"></div>
-                <div class="col text-white m-1"><img src="assets/icons/daumkakaologo.png" width="80"
-                        alt="daumkakaologo"></div>
-                <div class="col text-white m-1"><img src="assets/icons/airbnb.png" width="80" alt="airbnb"></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/mozilla.png" width="80" alt="mozilla"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/googlekorea.png" width="80" alt="google"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/naver.png" width="80" alt="naver"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/daumkakaologo.png" width="80"
+                    alt="daumkakaologo"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/airbnb.png" width="80" alt="airbnb"></a></div>
             </div>
         </div>
     </section>
